--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Teacher's Day </title>
     <style>
         h1{
-            color: lightcoral;
+            color: rgb(249, 248, 248);
             border: 10px solid dimgray;
             background-color: dimgrey;
         }
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <h1>HAPPY TEACHERS DAY</h1>
+    <h1>HAPPY TEACHERS DAY ! </h1>
 
 
 
@@ -44,15 +44,16 @@
 
     
 </a>
-    <p><i>“A good teacher can inspire hope, ignite the imagination, and instill a love of learning.” </i></p>
+    <p><i>“Dear teacher, thank you for planting the seeds that are going to last a lifetime!” </i></p>
     <ul>
-        <li>ThankYou for continuously inspiring to do my best.</li>
+        <li>ThankYou for continuously inspiring me to do my best.</li>
         <li>You help me strive for goals, I found guideance, friendship, discipline and love, everything in one person.</li>
         <li>And that person is you without any doubt!</li>
         <li>It’s been an utmost honor to be able to attend your classes; you taught us in the most friendly way! Thank you for being kind to me. </li>
         <li>Thank you so much for answering all my queries. You are the best teacher to me.</li>
         <li>I am indebted to you now and forever mam.</li>
-        <li>I can’t give you a visit on teacher’s day but my wishes will reach you at the right time to seek your blessings. Wish you a great time on the occasion of teachers day!</li>
+        <li>I can’t give you a visit on teacher’s day but my wishes will reach you at the right time to seek your blessings.</li>
+        <li>Wish you a great time on the occasion of teachers day!</li>
     </ul>
 
 
